multi hidden layer working
updated to allow multiple hidden layers

--- a/experiments/Energy_Function.ipynb
+++ b/experiments/Energy_Function.ipynb
@@ -452,7 +452,7 @@
     "    test_noise_std=0.0,\n",
     "    activation_function='gaussian_mixture',\n",
     "    enforce_symmetric_weights=False,\n",
-    "    device='cpu',\n",
+    "    device='cuda',\n",
     "    weight_init_method = \"normal\",\n",
     "    bias_flux_offsets = True,\n",
     "    energy_function=\"energy_soen_local\",\n",
