--- a/experiments/GPU_vs_CPU.ipynb
+++ b/experiments/GPU_vs_CPU.ipynb
@@ -173,11 +173,13 @@
     "    for num_input in num_inputs:\n",
     "        config.num_input = num_input\n",
     "        \n",
-    "        for device in [\"CPU\",\"MPS\"]:\n",
+    "        for device in [\"CPU\",\"MPS\",\"CUDA\"]:\n",
     "            if device == \"CPU\":\n",
     "                config.device = torch.device(\"cpu\")\n",
-    "            else:\n",
+    "            elif device == \"MPS\":\n",
     "                config.device = torch.device(\"mps\")\n",
+    "            else:\n",
+    "                config.device = torch.device(\"cuda\")\n",
     "            model = SOENModel(config).to(config.device)\n",
     "            \n",
     "            single_input_sample = torch.rand(1, model.num_input).abs()\n",
